se crea la tabla de Formulario de Activación se crea el formulario correctamente y se le da estilo

--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -4337,6 +4337,7 @@ input[type="button"].btn-block {
   background-clip: border-box;
   border: 1px solid rgba(0, 0, 0, 0.125);
   border-radius: 0.25rem;
+  margin: 70px 0px;
 }
 
 .card > hr {
@@ -4358,6 +4359,7 @@ input[type="button"].btn-block {
   -ms-flex: 1 1 auto;
   flex: 1 1 auto;
   padding: 1.25rem;
+  
 }
 
 .card-title {
